fixes off-center stats on front page. fixes #4515

--- a/web/stylus/common/view.styl
+++ b/web/stylus/common/view.styl
@@ -27,3 +27,4 @@
   width max-content
   margin-left auto
   margin-right auto
+  text-align center
